fix: Update GitHub footer link to the correct repository URL.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </section>
     </div>
     <footer>
-      <a href="#"><i class="fa-brands fa-github"></i> VATSU-tech</a>
+      <a href="https://github.com/VATSU-tech/uta_itika_tu.git"><i class="fa-brands fa-github"></i> VATSU-tech</a>
     </footer>
   </body>
   <script>
