style: Update link hover color for anchors.

--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
         text-decoration: none;
         color: #333;
     }
-    a:hover{
-        color: #555;
+    a:hover{ 
+        color: #ddd;
     }
   </style>
   <body>
