--- a/index.html
+++ b/index.html
@@ -2,18 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="description" content="uta itika tu">
-    <meta name="keywords" content="uta itika tu">
-    <meta name="author" content="VATSU">
-    <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#222">
-    <meta name="format-detection" content="telephone=no">
-    <meta name="msapplication-TileColor" content="#222">
-    <meta name="msapplication-TileImage" content="icon.svg">
-    <link rel="icon" href="icon.svg">
+    <meta name="description" content="uta itika tu" />
+    <meta name="keywords" content="uta itika tu" />
+    <meta name="author" content="VATSU" />
+    <meta name="robots" content="index, follow" />
+    <meta name="theme-color" content="var(--background)" />
+    <meta name="format-detection" content="telephone=no" />
+    <meta name="msapplication-TileColor" content="var(--background)" />
+    <meta name="msapplication-TileImage" content="icon.svg" />
+    <link rel="icon" href="icon.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+      integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>uta itika tu</title>
   </head>
   <style>
@@ -33,11 +39,17 @@
         "Open Sans",
         "Helvetica Neue",
         sans-serif;
-        transition: .5s;
+      transition: 0.5s;
+    }
+    :root {
+      --background: #dedede;
+      --color2: #333;
+      --color3: #33333375;
+      --white: #222;
     }
     body {
-      background-color: #222;
-      color: #ddd;
+      background-color: var(--background);
+      color: var(--white);
       display: flex;
       justify-content: center;
       align-items: center;
@@ -47,10 +59,21 @@
       display: flex;
       flex-direction: column;
       gap: 1rem;
-      background-color: #333;
+      background-color: transparent;
       padding: 2rem;
       border-radius: 2rem;
       text-align: center;
+      box-shadow:
+        var(--color2) 0 0 50rem,
+        var(--white) 2px 2px 0.5rem,
+        var(--color3) 0 0 7rem inset;
+    }
+    @keyframes identifier {
+      
+    }
+    h1 {
+      color: var(--background);
+      text-shadow: var(--color2) 0 0 5px;
     }
     section {
       display: flex;
@@ -60,29 +83,31 @@
     button {
       /* flex: 1; */
       width: 100px;
-      background-color: #222;
-      border: 1px solid #333;
+      background-color: var(--background);
+      border: 1px solid var(--color2);
       padding: 1rem;
       border-radius: 2rem;
-      color: #ddd;
+      color: var(--white);
     }
     button:hover {
-      border-color: #ddd;
+      border-color: var(--color2);
       cursor: pointer;
+      box-shadow: var(--color2) 0 0 1rem inset;
     }
     .hover {
       position: absolute;
+      border: 1px solid var(--white);
     }
-    footer{
-        position: absolute;
-        bottom: 10px;
+    footer {
+      position: absolute;
+      bottom: 10px;
     }
-    a{
-        text-decoration: none;
-        color: #333;
+    a {
+      text-decoration: none;
+      color: var(--color3);
     }
-    a:hover{ 
-        color: #ddd;
+    a:hover {
+      color: var(--white);
     }
   </style>
   <body>
@@ -94,7 +119,9 @@
       </section>
     </div>
     <footer>
-      <a href="https://github.com/VATSU-tech/uta_itika_tu.git"><i class="fa-brands fa-github"></i> VATSU-tech</a>
+      <a href="https://github.com/VATSU-tech/uta_itika_tu.git"
+        ><i class="fa-brands fa-github"></i> VATSU-tech</a
+      >
     </footer>
   </body>
   <script>
