refactor: Replace Font Awesome heart icon with an updated custom SVG image.

--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
     });
 
     const prodBulles = () => {
-      const bulle = document.createElement("span");
-      bulle.innerHTML = "<i class='fa-solid fa-heart'></i>";
+      const bulle = document.createElement("img");
+      bulle.src = "/icon.svg";
       bulle.classList.add("bulle");
 
       // Random Size
