--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="description" content="uta itika tu" />
@@ -10,7 +10,7 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="msapplication-TileColor" content="var(--background)" />
     <meta name="msapplication-TileImage" content="icon.svg" />
-    <link rel="icon" href="icon.svg" />
+    <link rel="icon" href="./icon.svg" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
@@ -123,6 +123,12 @@
       opacity: 1;
     }
 
+    .to{
+      color: var(--background);
+      animation:none;
+      text-shadow: 0 0 10px var(--white);
+    }
+
     /* Bubble Styles */
     .bulle {
       position: absolute;
@@ -148,10 +154,10 @@
   </style>
   <body>
     <div class="container">
-      <h1>Veut tu etre ma valentine ?</h1>
+      <h1 id="q">Veut tu etre ma valentine ?</h1>
       <section>
-        <button id="yes">Yes</button>
-        <button id="button">No</button>
+        <button id="yes" onclick='send("yes")' >Yes</button>
+        <button id="button" onclick="send('no')">No</button>
       </section>
     </div>
     <footer>
@@ -159,42 +165,22 @@
         ><i class="fa-brands fa-github"></i> VATSU-tech</a
       >
     </footer>
-  </body>
-  <script>
-    const btn = document.getElementById("button");
-    const container = document.querySelector(".container");
 
-    // Make the button run away
-    btn.addEventListener("mouseover", moveButton);
-    btn.addEventListener("click", moveButton); // Also move on click if they manage to catch it
+    <script>
+      const p = new URLSearchParams(location.search);
+      const to = p.get("to") || "Valentine";
+      const from = p.get("from") || "Quelqu’un";
+      document.getElementById("q").innerHTML =
+        `<span class='to'>${to}</span>` + ", veux-tu être ma Valentine ?";
 
-    function moveButton() {
-      // Add absolute positioning class if not present to allow free movement
-      if (!btn.classList.contains("hover")) {
-        btn.classList.add("hover");
-        // Move it out of the layout flow initially so it doesn't jump weirdly
-        // We append it to body so it can move anywhere on screen freely,
-        // or keep in container but use fixed positioning relative to viewport.
-        // Keeping in section might restrict it if we use percentages.
-        // Let's keep it simple: relative movement within viewport.
-        btn.style.position = "fixed";
+      function send(answer) {
+        fetch("/api/respond", {
+          method: "POST",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify({ to, from, answer }),
+        }).then(() => (document.querySelector('.container').innerHTML = "<h2>Merci 💘</h2>"));
       }
 
-      const x = Math.random() * (window.innerWidth - btn.offsetWidth);
-      const y = Math.random() * (window.innerHeight - btn.offsetHeight);
-
-      btn.style.left = x + "px";
-      btn.style.top = y + "px";
-    }
-
-    document.getElementById("yes").addEventListener("click", () => {
-      document.querySelector(".container").innerHTML =
-        "<h1>Thank you to love me realy !</h1>";
-      // Maybe trigger a burst of bubbles?
-      for (let i = 0; i < 50; i++) {
-        setTimeout(prodBulles, i * 50);
-      }
-    });
 
     const prodBulles = () => {
       const bulle = document.createElement("img");
@@ -202,14 +188,14 @@
       bulle.classList.add("bulle");
 
       // Random Size
-      const size = Math.random() * 50 + 20 + "px"; // 20px to 70px
+      const size = Math.random() * 90 + 20 + "px"; // 20px to 70px
       bulle.style.width = size;
-      bulle.style.height = size; // maintain aspect ratio if square svg
+      bulle.style.height = size;
 
       bulle.style.left = Math.random() * 100 + "%";
 
       // Random Animation Duration (Speed)
-      const duration = Math.random() * 15 + 10; // 3s to 8s
+      const duration = Math.random() * 15 + 10;
       bulle.style.animationDuration = duration + "s";
 
       // Random Delay
@@ -226,5 +212,6 @@
       ); // Wait for duration + delay
     };
     setInterval(prodBulles, 1000);
-  </script>
+    </script>
+  </body>
 </html>
